--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@types/three": "^0.160.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
-    "@react-three/drei": "^9.93.0",
-    "@react-three/fiber": "^8.15.13",
+    "@react-three/drei": "^9.96.4",
+    "@react-three/fiber": "^8.15.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -28,7 +29,7 @@
     "postcss": "^8",
     "react-intersection-observer": "^9.5.3",
     "tailwindcss": "^3.3.0",
-    "three": "^0.160.0",
+    "three": "^0.160.1",
     "typescript": "^5"
   }
 }
